--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "add-one": "node src/scripts/addOneContact.js",
     "count": "node src/scripts/countContacts.js",
     "thanos": "node src/scripts/thanos.js",
-    "remove-all": "node src/scripts/removeAllContacts.js"
+    "remove-all": "node src/scripts/removeAllContacts.js",
+    "lint": "eslint src/**/*.js",
+    "start": "node ./src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Oleksandra <akoroliova@google.com>",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.2.0",
