--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "@eslint/js": "^9.2.0",
     "eslint": "^9.2.0",
     "globals": "^15.1.0"
+  },
+  "dependencies": {
+    "nodemon": "^3.1.3"
   }
 }
