--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@faker-js/faker": "^8.4.1",
     "eslint": "^9.2.0",
     "globals": "^15.1.0"
   },
