--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
   "author": "Oleksandra <akoroliova@google.com>",
   "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "^9.2.0",
+    "@eslint/js": "^9.4.0",
     "@faker-js/faker": "^8.4.1",
-    "eslint": "^9.2.0",
-    "globals": "^15.1.0"
-  },
-  "dependencies": {
-    "nodemon": "^3.1.3"
+    "eslint": "^9.4.0",
+    "globals": "^15.4.0",
+    "nodemon": "^3.1.3",
+    "prettier": "^3.3.1"
   }
 }
